--- a/BlockEngine/BlockEngine.csproj
+++ b/BlockEngine/BlockEngine.csproj
@@ -13,11 +13,12 @@
     <PackageReference Include="ImGui.NET" Version="1.89.9.3" />
     <PackageReference Include="OpenTK" Version="4.8.1" />
     <PackageReference Include="StbImageSharp" Version="2.27.13" />
+    <PackageReference Include="YamlDotNet" Version="13.7.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Assets\**\*">
-		<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    <Content Include="Assets\**">
+		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	</Content>
 	
   </ItemGroup>
