--- a/BlockEngine/Assets/mods/builtin/builtin.yaml
+++ b/BlockEngine/Assets/mods/builtin/builtin.yaml
@@ -3,24 +3,45 @@ namespace: block_engine
 description: Built-in blocks
 author: Japsu
 blocks:
-- name: TestBlock
+- name: Stone
   render_type: Normal
   face_textures:
     front:
       textures:
-      - test_block.png
+      - stone.png
     back:
       textures:
-      - test_block.png
+      - stone.png
     left:
       textures:
-      - test_block.png
+      - stone.png
     right:
       textures:
-      - test_block.png
+      - stone.png
     top:
       textures:
-      - test_block.png
+      - stone.png
     bottom:
       textures:
-      - test_block.png
+      - stone.png
+- name: Dirt
+  render_type: Normal
+  face_textures:
+    front:
+      textures:
+        - dirt.png
+    back:
+      textures:
+        - dirt.png
+    left:
+      textures:
+        - dirt.png
+    right:
+      textures:
+        - dirt.png
+    top:
+      textures:
+        - dirt.png
+    bottom:
+      textures:
+        - dirt.png
