--- a/.github/workflows/build_client.yml
+++ b/.github/workflows/build_client.yml
@@ -1,4 +1,4 @@
-name: build
+name: client build
 
 on:
   push:
@@ -26,7 +26,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Install dependencies
-      run: dotnet restore ./source/Client.csproj
+      run: dotnet restore ./source/client/Client.csproj
       
     - name: Build
-      run: dotnet build --configuration Release --no-restore ./source/Client.csproj
+      run: dotnet build --configuration Release --no-restore ./source/client/Client.csproj
