--- a/source/client/assets/mods/builtin/builtin.yaml
+++ b/source/client/assets/mods/builtin/builtin.yaml
@@ -8,40 +8,40 @@ blocks:
   face_textures:
     front:
       textures:
-      - stone.png
+      - textures/stone.png
     back:
       textures:
-      - stone.png
+      - textures/stone.png
     left:
       textures:
-      - stone.png
+      - textures/stone.png
     right:
       textures:
-      - stone.png
+      - textures/stone.png
     top:
       textures:
-      - stone.png
+      - textures/stone.png
     bottom:
       textures:
-      - stone.png
+      - textures/stone.png
 - name: Dirt
   render_type: Normal
   face_textures:
     front:
       textures:
-        - dirt.png
+        - textures/dirt.png
     back:
       textures:
-        - dirt.png
+        - textures/dirt.png
     left:
       textures:
-        - dirt.png
+        - textures/dirt.png
     right:
       textures:
-        - dirt.png
+        - textures/dirt.png
     top:
       textures:
-        - dirt.png
+        - textures/dirt.png
     bottom:
       textures:
-        - dirt.png
+        - textures/dirt.png
