--- a/source/client/Client.csproj
+++ b/source/client/Client.csproj
@@ -23,4 +23,8 @@
 		<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	</Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="source\Framework\WorldGeneration\" />
+  </ItemGroup>
 </Project>
