Fixed incorrect chunk meshes and AO seams.
Chunks were getting meshed before their neighbouring chunks were generated, causing neighbours to return only air blocks.

Now we only allow a chunk to be meshed, if it has all it's neighbours generated.

As a side-effect this means that the visual render distance is one chunk lower than set, because the "furthest away" chunks cannot mesh themselves, since there is no neighbour data available.
As a bonus though, the border blocks of the furthest chunks (which wouldn't anyways get seen by the player) are not rendered, which means we do not need to manually cull those.

--- a/source/client/assets/mods/builtin/builtin.yaml
+++ b/source/client/assets/mods/builtin/builtin.yaml
@@ -29,19 +29,19 @@ blocks:
   face_textures:
     front:
       textures:
-        - textures/dirt.png
+        - textures/dirt_side.png
     back:
       textures:
-        - textures/dirt.png
+        - textures/dirt_side.png
     left:
       textures:
-        - textures/dirt.png
+        - textures/dirt_side.png
     right:
       textures:
-        - textures/dirt.png
+        - textures/dirt_side.png
     top:
       textures:
-        - textures/dirt.png
+        - textures/dirt_top.png
     bottom:
       textures:
         - textures/dirt.png
