--- a/source/client/Client.csproj
+++ b/source/client/Client.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="ConcurrentHashSet" Version="1.3.0" />
     <PackageReference Include="Config.Net" Version="5.1.5" />
     <PackageReference Include="ImGui.NET" Version="1.89.9.3" />
+    <PackageReference Include="JetBrains.Profiler.Api" Version="1.4.0" />
     <PackageReference Include="OpenTK" Version="4.8.1" />
     <PackageReference Include="StbImageSharp" Version="2.27.13" />
     <PackageReference Include="YamlDotNet" Version="13.7.1" />
