Add alpha-masked transparency
Add "alpha clipping" transparency support, for partial block textures like window blocks.

--- a/source/client/assets/mods/transparency test/mod.yaml
+++ b/source/client/assets/mods/transparency test/mod.yaml
@@ -4,7 +4,7 @@ description: Test transparent blocks
 author: Japsu
 blocks:
 - name: Glass
-  render_type: Normal
+  render_type: Transparent
   face_textures:
     front:
       textures:
