Refactor texture system
Add Renderbuffer.cs and Framebuffer.cs.

Add GLResource.cs and GLObject.cs for easy OpenGL state/memory management.

Add colored glass mod for testing.

Split chunk rendering shaders to opaque (no transparency), cutout (full transparency = alpha clip) and translucent (partial transparency).

--- a/source/client/assets/mods/builtin/mod.yaml
+++ b/source/client/assets/mods/builtin/mod.yaml
@@ -4,7 +4,7 @@ description: Built-in blocks
 author: Japsu
 blocks:
 - name: Stone
-  render_type: Normal
+  render_type: Opaque
   face_textures:
     front:
       textures:
@@ -25,7 +25,7 @@ blocks:
       textures:
       - textures/stone.png
 - name: Dirt
-  render_type: Normal
+  render_type: Opaque
   face_textures:
     front:
       textures:
