--- a/source/client/log4net.config
+++ b/source/client/log4net.config
@@ -26,7 +26,7 @@
         </layout>
     </appender>
     <appender name="file" type="log4net.Appender.RollingFileAppender">
-        <file value="myapp.log" />
+        <file value="latest.log" />
         <appendToFile value="true" />
         <rollingStyle value="Size" />
         <maxSizeRollBackups value="5" />
