--- a/source/client/assets/mods/builtin/mod.yaml
+++ b/source/client/assets/mods/builtin/mod.yaml
@@ -29,6 +29,27 @@ blocks:
   face_textures:
     front:
       textures:
+        - textures/dirt.png
+    back:
+      textures:
+        - textures/dirt.png
+    left:
+      textures:
+        - textures/dirt.png
+    right:
+      textures:
+        - textures/dirt.png
+    top:
+      textures:
+        - textures/dirt.png
+    bottom:
+      textures:
+        - textures/dirt.png
+- name: Surface Dirt
+  render_type: Opaque
+  face_textures:
+    front:
+      textures:
         - textures/dirt_side.png
     back:
       textures:
@@ -45,3 +66,150 @@ blocks:
     bottom:
       textures:
         - textures/dirt.png
+- name: Oak Log
+  render_type: Opaque
+  face_textures:
+    front:
+      textures:
+        - textures/log_oak.png
+    back:
+      textures:
+        - textures/log_oak.png
+    left:
+      textures:
+        - textures/log_oak.png
+    right:
+      textures:
+        - textures/log_oak.png
+    top:
+      textures:
+        - textures/log_oak_top.png
+    bottom:
+      textures:
+        - textures/log_oak_top.png
+- name: Oak leaves
+  render_type: AlphaClip
+  face_textures:
+    front:
+      textures:
+        - textures/leaves_oak.png
+    back:
+      textures:
+        - textures/leaves_oak.png
+    left:
+      textures:
+        - textures/leaves_oak.png
+    right:
+      textures:
+        - textures/leaves_oak.png
+    top:
+      textures:
+        - textures/leaves_oak.png
+    bottom:
+      textures:
+        - textures/leaves_oak.png
+- name: Glass
+  render_type: Transparent
+  face_textures:
+    front:
+      textures:
+        - textures/glass.png
+    back:
+      textures:
+        - textures/glass.png
+    left:
+      textures:
+        - textures/glass.png
+    right:
+      textures:
+        - textures/glass.png
+    top:
+      textures:
+        - textures/glass.png
+    bottom:
+      textures:
+        - textures/glass.png
+- name: White Glass
+  render_type: Transparent
+  face_textures:
+    front:
+      textures:
+        - textures/glass_white.png
+    back:
+      textures:
+        - textures/glass_white.png
+    left:
+      textures:
+        - textures/glass_white.png
+    right:
+      textures:
+        - textures/glass_white.png
+    top:
+      textures:
+        - textures/glass_white.png
+    bottom:
+      textures:
+        - textures/glass_white.png
+- name: Red Glass
+  render_type: Transparent
+  face_textures:
+    front:
+      textures:
+        - textures/glass_red.png
+    back:
+      textures:
+        - textures/glass_red.png
+    left:
+      textures:
+        - textures/glass_red.png
+    right:
+      textures:
+        - textures/glass_red.png
+    top:
+      textures:
+        - textures/glass_red.png
+    bottom:
+      textures:
+        - textures/glass_red.png
+- name: Green Glass
+  render_type: Transparent
+  face_textures:
+    front:
+      textures:
+        - textures/glass_green.png
+    back:
+      textures:
+        - textures/glass_green.png
+    left:
+      textures:
+        - textures/glass_green.png
+    right:
+      textures:
+        - textures/glass_green.png
+    top:
+      textures:
+        - textures/glass_green.png
+    bottom:
+      textures:
+        - textures/glass_green.png
+- name: Blue Glass
+  render_type: Transparent
+  face_textures:
+    front:
+      textures:
+        - textures/glass_blue.png
+    back:
+      textures:
+        - textures/glass_blue.png
+    left:
+      textures:
+        - textures/glass_blue.png
+    right:
+      textures:
+        - textures/glass_blue.png
+    top:
+      textures:
+        - textures/glass_blue.png
+    bottom:
+      textures:
+        - textures/glass_blue.png
