WIP LimitedRegion system

--- a/source/client/Client.csproj
+++ b/source/client/Client.csproj
@@ -36,5 +36,6 @@
 
   <ItemGroup>
     <Folder Include="Assets\shaders\include\" />
+    <Folder Include="source\Generation\Features\" />
   </ItemGroup>
 </Project>
