--- a/source/client/Client.csproj
+++ b/source/client/Client.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>Korpi.Client</RootNamespace>
     <Company>Japsu</Company>
     <Product>Korpi Client</Product>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -36,5 +37,6 @@
 
   <ItemGroup>
     <Folder Include="Assets\shaders\include\" />
+    <Folder Include="Assets\textures\icon\" />
   </ItemGroup>
 </Project>
