Add GameServer abstraction

--- a/source/client/Client.csproj
+++ b/source/client/Client.csproj
@@ -39,4 +39,8 @@
     <Folder Include="Assets\shaders\include\" />
     <Folder Include="Assets\textures\icon\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\server\Server.csproj" />
+  </ItemGroup>
 </Project>
