--- a/source/server/Server.csproj
+++ b/source/server/Server.csproj
@@ -4,6 +4,11 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Korpi.Server</RootNamespace>
     </PropertyGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\common\Common.csproj" />
+    </ItemGroup>
 
 </Project>
