--- a/source/server/Server.csproj
+++ b/source/server/Server.csproj
@@ -5,10 +5,13 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <RootNamespace>Korpi.Server</RootNamespace>
+		<DefineConstants>$(DefineConstants);TRACE;SERVER</DefineConstants>
+		<Configurations>Debug;Release</Configurations>
+		<Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\common\Common.csproj" />
+      <ProjectReference Include="..\networking\Networking.csproj" />
     </ItemGroup>
 
 </Project>
