--- a/source/client/Client.csproj
+++ b/source/client/Client.csproj
@@ -30,7 +30,6 @@
     <PackageReference Include="ImGui.NET" Version="1.89.9.3" />
     <PackageReference Include="JetBrains.Profiler.Api" Version="1.4.0" />
     <PackageReference Include="JetBrains.Profiler.SelfApi" Version="2.5.0" />
-    <PackageReference Include="log4net" Version="2.0.15" />
     <PackageReference Include="OpenTK" Version="4.8.2" />
     <PackageReference Include="StbImageSharp" Version="2.27.13" />
     <PackageReference Include="YamlDotNet" Version="13.7.1" />
@@ -52,6 +51,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\common\Common.csproj" />
     <ProjectReference Include="..\server\Server.csproj" />
   </ItemGroup>
 </Project>
