--- a/source/networking/Networking.csproj
+++ b/source/networking/Networking.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="LiteNetLib" Version="1.2.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\common\Common.csproj" />
+    </ItemGroup>
+
 </Project>
