--- a/src/KorpiEngine/Networking/Networking.csproj
+++ b/src/KorpiEngine/Networking/Networking.csproj
@@ -4,19 +4,15 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>Networking</AssemblyName>
-        <RootNamespace>Korpi.Networking</RootNamespace>
-        <Configurations>Debug;Release</Configurations>
-        <Platforms>AnyCPU</Platforms>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="LiteNetLib" Version="1.2.0" />
+      <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\common\Common.csproj" />
+      <PackageReference Include="LiteNetLib" Version="1.2.0" />
     </ItemGroup>
 
 </Project>
