--- a/src/Korpi/StandaloneServer/StandaloneServer.csproj
+++ b/src/Korpi/StandaloneServer/StandaloneServer.csproj
@@ -27,4 +27,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="log4net" Version="2.0.15" />
+    </ItemGroup>
+
 </Project>
