Enable engine NuGet package building
The engine solution now builds local nuget packages to the "packages" folder (next to the .sln) on build, so game projects can import these packages.
This has the added benefit of automatically handling engine dependencies through NuGet.
One negative is of course that you need to manually update the packages when they have changed.

--- a/src/Korpi/Server/Server.csproj
+++ b/src/Korpi/Server/Server.csproj
@@ -11,12 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Reference Include="Core">
-        <HintPath>..\..\KorpiEngine\Core\bin\Release\net6.0\KorpiEngine.Core.dll</HintPath>
-      </Reference>
-      <Reference Include="Networking">
-        <HintPath>..\..\KorpiEngine\Networking\bin\Release\net6.0\KorpiEngine.Networking.dll</HintPath>
-      </Reference>
+      <PackageReference Include="KorpiEngine" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
