--- a/src/Korpi/Client.Tests/Client.Tests.csproj
+++ b/src/Korpi/Client.Tests/Client.Tests.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
         <PackageReference Include="JetBrains.Profiler.SelfApi" Version="2.5.0" />
+        <PackageReference Include="KorpiEngine" Version="1.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.4.2"/>
