--- a/src/Korpi/Client/Client.csproj
+++ b/src/Korpi/Client/Client.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="ImGui.NET" Version="1.89.9.3" />
     <PackageReference Include="JetBrains.Profiler.Api" Version="1.4.0" />
     <PackageReference Include="JetBrains.Profiler.SelfApi" Version="2.5.0" />
+    <PackageReference Include="KorpiEngine" Version="1.0.0" />
     <PackageReference Include="log4net" Version="2.0.15" />
     <PackageReference Include="OpenTK" Version="4.8.2" />
     <PackageReference Include="StbImageSharp" Version="2.27.13" />
@@ -55,12 +56,4 @@
     <ProjectReference Include="..\server\Server.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="Core">
-      <HintPath>..\..\KorpiEngine\Core\bin\Release\net6.0\KorpiEngine.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Networking">
-      <HintPath>..\..\KorpiEngine\Networking\bin\Release\net6.0\KorpiEngine.Networking.dll</HintPath>
-    </Reference>
-  </ItemGroup>
 </Project>
