--- a/src/KorpiEngine/All/All.csproj
+++ b/src/KorpiEngine/All/All.csproj
@@ -4,23 +4,21 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <AssemblyName>KorpiEngine.Networking</AssemblyName>
-        <RootNamespace>KorpiEngine.Networking</RootNamespace>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageOutputPath>$(SolutionDir)packages</PackageOutputPath>
-        <Title>KorpiEngine.Networking</Title>
-        <Authors>Japsu</Authors>
-        <Description>KorpiEngine networking module</Description>
+        <Title>KorpiEngine</Title>
+        <Description>Contains all KorpiEngine modules</Description>
         <PackageLicenseUrl>https://github.com/japsuu/Korpi/blob/master/LICENCE.md</PackageLicenseUrl>
         <RepositoryUrl>https://github.com/japsuu/Korpi</RepositoryUrl>
         <RepositoryType>git</RepositoryType>
         <PackageTags>KorpiEngine</PackageTags>
         <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+        <PackageId>KorpiEngine</PackageId>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Core\Core.csproj" />
+      <PackageReference Include="KorpiEngine.Core" Version="1.0.0" />
+      <PackageReference Include="KorpiEngine.Networking" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
