--- a/src/KorpiEngine/Core/Core.csproj
+++ b/src/KorpiEngine/Core/Core.csproj
@@ -24,6 +24,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Arch" Version="1.2.7" />
       <PackageReference Include="ImGui.NET" Version="1.89.9.3" />
       <PackageReference Include="log4net" Version="2.0.15" />
       <PackageReference Include="OpenTK" Version="4.8.2" />
