--- a/src/KorpiEngine/Core/Core.csproj
+++ b/src/KorpiEngine/Core/Core.csproj
@@ -32,4 +32,8 @@
       <PackageReference Include="StbImageSharp" Version="2.27.13" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Internal\" />
+    </ItemGroup>
+
 </Project>
