Enable Log4Net logging. Fix crash on shutdown.

--- a/src/KorpiEngine/Core/Core.csproj
+++ b/src/KorpiEngine/Core/Core.csproj
@@ -32,4 +32,11 @@
       <PackageReference Include="StbImageSharp" Version="2.27.13" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="log4net.config" />
+      <Content Include="log4net.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
