--- a/src/KorpiEngine/Sandbox/Sandbox.csproj
+++ b/src/KorpiEngine/Sandbox/Sandbox.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\Core\Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="log4net.config" />
+    </ItemGroup>
+
 </Project>
