Wip material system rework

--- a/src/KorpiEngine/Core/Core.csproj
+++ b/src/KorpiEngine/Core/Core.csproj
@@ -33,13 +33,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Remove="log4net.config" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="assets\log4net.config" />
-      <Content Include="assets\log4net.config">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <Content Include="assets\**">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
 
