--- a/.github/workflows/test_client.yml
+++ b/.github/workflows/test_client.yml
@@ -26,7 +26,7 @@ jobs:
         dotnet-version: ${{ env.DOTNET_VERSION }}
 
     - name: Install dependencies
-      run: dotnet restore .src/Korpi/Client.Tests/Client.Tests.csproj
+      run: dotnet restore ./src/Korpi/Client.Tests/Client.Tests.csproj
       
     - name: Test
-      run: dotnet test --no-restore --verbosity normal .src/Korpi/Client.Tests/ClientTests.csproj
+      run: dotnet test --no-restore --verbosity normal ./src/Korpi/Client.Tests/ClientTests.csproj
