--- a/.github/workflows/test_client.yml
+++ b/.github/workflows/test_client.yml
@@ -29,4 +29,4 @@ jobs:
       run: dotnet restore ./src/Korpi/Client.Tests/Client.Tests.csproj
       
     - name: Test
-      run: dotnet test --no-restore --verbosity normal ./src/Korpi/Client.Tests/ClientTests.csproj
+      run: dotnet test --no-restore --verbosity normal ./src/Korpi/Client.Tests/Client.Tests.csproj
